--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,20 @@ body {
   background: linear-gradient(45deg, #000000 50%, #ffffff 50%);
 }
 
+.theme-sr {
+  background: radial-gradient(circle, #000000 0%);
+}
+
+/* Default "round" appearance */
+.theme-sr.round-mode {
+  background: radial-gradient(circle, #0c0000cc 0%, #ffffff33 100%);
+}
+
+/* Square mode (when borders are 0) */
+.theme-sr.square-mode {
+  background: linear-gradient(135deg, #000 0%, #333 100%);
+}
+
 /* Section Search Bars */
 .section-search {
   margin-bottom: 2rem;
